--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-
+println("TEST")
+println(System.getenv("HOME"))
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
