--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -18,9 +19,8 @@
         </activity>
 
         <activity
-            android:name=".ui.addtask.AddTaskActivity"
+            android:name=".ui.edittask.EditTaskActivity"
             android:label="@string/add_task_activity"/>
-
     </application>
 
 </manifest>
